# totalpreprocess

./: .gitignore  CMakeLists.txt  README.md  angle.cpp  angle.hpp  data.cpp  data.hpp  main.cpp  main_generator.cpp  main_iou.cpp  main_resize.cpp  main_union.cpp  main_viewer.cpp  matrix.h  polygonpreprocess.cpp  polygonpreprocess.hpp  preprocess.convert.py  preprocess.pre.py  preprocess.resize.py  process.cpp  process.hpp  resize.cpp  resize.hpp  skeleton.cpp  skeleton.hpp  totalpreprocess.hpp  union.cpp  union.hpp  算法.txt
matlab/: convert.m
testdata/: output_0.npy  output_1.npy  output_2.npy  output_3.npy  output_4.npy  output_5.npy  poly.output  run.sh
testdata/ground_truth/: poly_gt_img11.mat.output  poly_gt_img12.mat.output  poly_gt_img13.mat.output  poly_gt_img14.mat.output  poly_gt_img15.mat.output  poly_gt_img16.mat.output  poly_gt_img17.mat.output  poly_gt_img18.mat.output  poly_gt_img19.mat.output  poly_gt_img20.mat.output
testdata/output/: img11_0.npy  img11_1.npy  img11_2.npy  img11_3.npy  img11_4.npy  img11_5.npy  img12_0.npy  img12_1.npy  img12_2.npy  img12_3.npy  img12_4.npy  img12_5.npy  img13_2.npy  img13_3.npy  img13_4.npy  img13_5.npy  img14_2.npy  img14_3.npy  img14_4.npy  img14_5.npy  img15_1.npy  img15_2.npy  img15_3.npy  img15_4.npy  img15_5.npy  img16_2.npy  img16_3.npy  img16_4.npy  img16_5.npy  img17_1.npy  img17_2.npy  img17_3.npy  img17_4.npy  img17_5.npy  img18_2.npy  img18_3.npy  img18_4.npy  img18_5.npy  img19_0.npy  img19_1.npy  (+9 more)
